Fix tag alignment, margin headers,

--- a/quartz/quartz/styles/custom.scss
+++ b/quartz/quartz/styles/custom.scss
@@ -15,11 +15,14 @@
 
 h2 {
     margin-bottom: 0;
+    margin-top: 0;
     font-size: 1.6rem;
 }
 
 h3 {
     font-size: 1.4rem;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 hr {
